@@ -370,31 +370,31 @@
   <data name="toolStripButtonRemoveTextForHi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWaSURBVFhHrVZ7TJNXFCfZlpmYmCVzy7LpnE6zaEw2M3VT
-        hE8e8n60VAoTbIWBhQIFW15jwEelyEp5TChiEUFaEB8j8UHisrrFDRX/W+bcshGzsWR/CPRBiChMxrf+
-        vt1bWgRpkV9y0p5zzz3n3POdc+718RQsa1p1OKtpe3xSnTYqRuNGkGENOkR9+ZChOvF6uryxLDxcadkd
-        kMXt2JM+L+1i5Bx0Dmef/Kq+vm8D2f58KFOb/ASC0r8/8pe5OfMLynUj1zUQE6GyGrv664iZpaHr3EBV
-        ULjKaRSn3xdecjtHaahJTm5c70ryPL0Ga3uCcpz6CEyWe7ydYdgXiUnPUVDasikgNPcxNcZEKyca9Nd0
-        LLuwMaw5gtstTat9SPchc2rN2Tai4jmyCztGqZGkJHbSbP51F06Sm996SCyuGmaY7CmGkRPKnoIMa9Bh
-        2Y4VyYeO9dH9foxigq0ybiWmF0d947VImkqkvUzdFQB5ikxX4VqEW7ZJn3zsn+Hkcdq8ovY/MjOb1yKQ
-        RFnDOF1LlFR288Y9gSStppdujBWz30DWYjAfoUExQuVE9H51HgoUp46J1yjC4koe0GBQtKbeO2twahqw
-        V1kIE1T+RQPIL+xUqnTGlXAAHnVh6unfS1SdUKl0KzXVFy/TIDIUhrOQ49OAR4smJn+5j1deDKFhn/MB
-        BIYWckglBgxOAuNf1F0+TdSeAr59tKhsEHuRJfCihNoS8NgbLlR7F0BwRDEHHlMOfEBw1ngR2/EOr7QA
-        4sRVAjjbG6LipFJ2RUmZSUhniKM7bhO1Z2NuAEKRthp8lFBzF7zReDtJuL9GRkmtNu2AHEhIavRDumkA
-        yCAdVHT/oqABUCPVuktHg8PlTwqLun/EEHIdNiA4aOu4cQp7kWbXAHIL2ouonjStpol3sBhiXYoQDomY
-        R0RsxU+Qo//DIj8bpqejVS5Jq/+FXyc1kJff0Q/eqyJEv+OUIHQBEfNApcMJBhN4zHsYB6XLTh2ho1vy
-        aWMPLjEmJG8GvG9g9j+YkryRxWC5M7jqgPTEh6h+fEMiXhAhUSV8AJIU/RH8jxSUcV1dNz/AUIJzUOLB
-        qltEfXnR3PptDs0AUowpiE5B3dDqx8Sk03RZ0Wm6aUBq4cR10iEA14sMdcBveB5otFfOoBPK2Qs3eL6m
-        V0LHLH5b2r5zzvpq9flItDAG2cGUWu77W0OBZGnpECZoTXAWGVt5E9UdlVA+Bh4nPXrsYhFRcwJ1BJoZ
-        HHyZiJ4PQvFsANK0unT6ffFUIyo+cGbX6fZaQmO7hnz9pkE2/8B71vKK0496etYStaWBBoBxLEpkJ/lg
-        HNVOu4QzGF6yKYt7rOve46xvrOesb22cpdXrOMvOnZPjHUYBb2wpyMptPQqnrkRvPMBWpa1zczoP8UH0
-        9W0mW7zDlSu/rc5RnOSvVhDufAwarFlYdtXojp2T8zl1I0dmbPnFX/MGvYFc0WSOjmMnTabrI5mKdn2q
-        TK+nzgH71asay6tvzjrCZ6D07pbZ/461UWnqfRQn2eoZ0FI49UK3mb2gtNr6yhrOLj7I/Ts9zXEzM24E
-        2eSfQ9zoxq3cqH8A53VB0gBwERGRG+x1DXwAlu1+3KMLvdzjS1ed9PCHfm7CfJ2zNxzns2FJy+BsZvPb
-        ZKtnQLUjAHQAnutE7IS9rXObM/2Oincj18/hqIERWdY9r2dDpKDUSItP9Al7H68c3PV4lOIB8vPA75tt
-        ItGDp9pvLqEeZPIIYtZzdJ8bSKHXKggXjy+TM4wRjP/ojsHmTsay6f3hBYNwyEdjhOcxL4hZ71BabiwK
-        i/m/FuYSglDkn0keY9kNw9FiK98RjpqgNPza1inbgUM1XHz8C8Tc0oBbTpKq10bFlVzGvS9MYO/iwYoh
-        5fpuwLDBYBqRpGrHTN3aZzv28fkP9d0tiHkeffIAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWaSURBVFhHrVZ7TJNXFCfZlpmYkCVzy7LpnE6zuJDMZcIm
+        Ch8veT9aKoUJtMDAAoXyKAJjwGelyEp5TKwiiCAtiI+RqJC4rG5xA9H/ljm3bMRMl+wPkT4IEYXJ+Nbf
+        t3tLqyAt8EtO2nPuueece75zzr0eroJlDZ775Ud3JCQ3aqJj1U4EGdagQ9RXD9nK469n5bZURUQUm3wD
+        5Zz37qwFaSeTy0Fnf96Jr5uaBjeT7StDlcrgJxBU/v2xv8zJmV9wgRM5roGYSKVZ3zPUSMwsDz1nb9QG
+        RyjtRnH6PREVI/nFbfUpKS2bHCm3UKfG2u7gfLs+ApMVHOlkGPZFYtJ1HKhs3RoYVvCYGmNiiqeadVe0
+        LLu4MazZgvOVZjY8pPuQOZX6TAdRcR15pV3j1EhyMjttNP62EycpKGlPE4trxxhGPsMwuYTkM5BhDTos
+        27UmJe3wIN3vxyim2Fq9FzG9NJparkTRVCLtVaqeQMjTZdqDjkW4bbv0ySf+2XYepy0s6/wzJ+fYBgSS
+        JGuepGtJkppe3rgrkGTW99ONcWL2W8ha24xFNChGWDwVs1dViALFqWMT1Irw+Ir7NBgUraH/5nqcmgbs
+        VhbCBTV/0QBKSruLlVr9WjgAj7ow9A0FEFU7lErtWnXdhUs0iGxF2xnI8WnAo0WTUr7awysvhbDwL/gA
+        gsJKOaQSAwYngfEvGy+dImrPAN8+RlQ1ir3IEnhRYkMFeOyNEKrcCyAkspwDjykHPjBEPlnGdr3DKy2C
+        eHGtAM4CQpWcVMquqagyCOkMsXXHCFF7Pp4OQCjS1IGPFqpvgdfrR5KFe+tllFQqgzfkQGJyix/STQNA
+        BumgovuXBA2AGqnTXjwUEpHzpLSs9ycMIcdhA4KDjq5rJ7EXaXYMoOBAZxnVk2bWH+UdLIU4hyKEQyLm
+        ERl38GfI0f/hUZ+P0dPRKpdkNv3Kr5MaKCzpGgLvVhGi33FKELqAiHmg0uEEgwk85j2Mg7JkJ4vo6JZ8
+        1tKHS4wJLZwDvyso7x9MSd7IUjDdHPXcJz3+Eaof35CIF0VodAUfgCRdV4T/UYIqrqdneDuGEpyDklJr
+        rxP11cWx9u/yaQaQYkxBdArqhlY/JiadpquKbsNwG1ILJ46TDgE4XmSoA37DSqDWXD6NTqhmz1/j+fp+
+        CR2z+G3t+N4+6+tU56LQwhhkqekN3A/X7wWRpeVDmKgxwFlUXM0wqjs6sXoCPE566PCFMqJmB+oINDc6
+        +jIRrQxC8XwA0szGLPp98VQjKh5wZtVqA0xhcT13fXfPgiz+QbfN1QdPPerr20DUlgcaAMaxKImd5oOx
+        VTvtEq6t7SVLcXmfeeN7nPmNTZz5rS3ztG4jZ/LxmZ7s0gt4Y8uBvKD9EJw6Er3xAEutptHJ6QLEBzE4
+        uI1scQ+XL/++Ll9xgr9aQbjzMWiwZmJZz3Fvn+mFnDqRLTOWkvJveIPuIFdx1BgTz04bDFcf5Cg6dRky
+        nY46B6wDA2rTq2/OO8JnoPTu+/P/bWvj0ow7KE6y1TWgpXDqxW4z64HKOvMr6zmrOJX7d3aW4+bmnAiy
+        6bv3uPEtXty4fyDndkHSAHAREZETrI3NfACmHX7co/P93OOLA3Z6+OMQN2W8ylmbj/DZMGVmcxaj8W2y
+        1TWg2hEAOgDPdSK2w9rR/aE9/baKdyLHz2GrgQcy+W23Z0OUoFJPi0/0KXsHrxzc9XiU4gHyy40/tllE
+        ovvPtN/ThHqQ5UYSs66j9+yNdHqtgnDx7GLyxzCC8R/dMXqsmzFt/WBs0SBs8vFY4TnMC2LWPVRW68vC
+        Y/+vhacJQShKTqdMsOzmsRixme8IW01QGnvNa8ayL62eS0h4gZhbHnDLSTJ0muj4iku494WJ7C08WDGk
+        HN8NGDYYTA8kGZoJQ6/m+Y49PP4Dfvsteu4IL1EAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="toolStripButtonVisualSync.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -752,7 +752,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD2
-        CAAAAk1TRnQBSQFMAgEBAgEAAZABIwGQASMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CAAAAk1TRnQBSQFMAgEBAgEAAZgBIwGYASMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
